--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,1 +1,12 @@
-<p>projects works!</p>
+<div class="container">
+    <h1>Proyectos</h1>
+
+    <ul class="projects">
+        <li *ngFor="let project of projects" class="project">
+            <h2 class="project-name">{{ project.name }}</h2>
+            <img src="{{url+'get-image/'+ project.image}}" *ngIf="project.image">
+            <h3 class="project-description">{{ project.description }} </h3>
+        </li>
+    </ul>
+
+</div>
